Rackspace.Utilities/bastion-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "2018.12.01.0",
  "parameters": {
    "Name": {
      "type": "string",
      "metadata": {
        "description": "The name of the NSG to update"
      }
    },
    "DestinationPrefix": {
      "type": "string",
      "metadata": {
        "description": "The CIDR of the subnet this NSG is attached to"
      }
    }
  },
  "variables": {
    "rackspaceBastionDFW": "172.99.99.10/32",
    "rackspaceBastionIAD": "146.20.2.10/32",
    "rackspaceBastionORD": "161.47.0.10/32",
    "rackspaceBastionHKG": "119.9.122.10/32",
    "rackspaceBastionLON": "134.213.179.10/32",
    "rackspaceBastionLON5": "134.213.178.10/32",
    "rackspaceBastionSYD": "119.9.148.10/32",
    "rackspacepBastionDFW": "72.3.186.100/32",
    "rackspacepBastionIAD": "146.20.30.100/32",
    "rackspacepBastionORD": "161.47.6.100/32",
    "rackspacepBastionHKG": "120.136.39.100/32",
    "rackspacepBastionLON": "134.213.183.100/32",
    "rackspacepBastionLON5": "134.213.182.100/32",
    "rackspacepBastionSYD": "119.9.163.100/32"
  },
  "resources": [
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_DFW')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspaceBastionDFW')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 144,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_IAD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspaceBastionIAD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 145,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_ORD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspaceBastionORD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 146,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_HKG')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspaceBastionHKG')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 147,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_LON')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspaceBastionLON')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 148,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_LON5')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspaceBastionLON5')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 149,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_SYD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspaceBastionSYD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 150,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_DFW')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspaceBastionDFW')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 151,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_IAD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspaceBastionIAD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 152,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_ORD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspaceBastionORD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 153,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_HKG')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspaceBastionHKG')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 154,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_LON')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspaceBastionLON')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 155,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_LON5')]",
      "location": "[resourceGroup().location]",

      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspaceBastionLON5')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 156,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_SYD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspaceBastionSYD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 157,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_DFW')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspaceBastionDFW')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 158,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_IAD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspaceBastionIAD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 159,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_ORD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspaceBastionORD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 160,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_HKG')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspaceBastionHKG')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 167,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_LON')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspaceBastionLON')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 168,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_LON5')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspaceBastionLON5')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 169,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_SYD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspaceBastionSYD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 170,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_LON')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspaceBastionLON')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 171,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_LON5')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspaceBastionLON5')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 172,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_DFW')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspaceBastionDFW')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 173,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_ORD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspaceBastionORD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 174,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_IAD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspaceBastionIAD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 175,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_HKG')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspaceBastionHKG')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 176,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_SYD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspaceBastionSYD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 177,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_PDFW')]",
      "location": "[resourceGroup().location]",

      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspacepBastionDFW')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 178,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_PDFW')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspacepBastionDFW')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 179,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_PDFW')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspacepBastionDFW')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 180,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_PDFW')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspacepBastionDFW')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 181,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_PIAD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspacepBastionIAD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 182,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_PIAD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspacepBastionIAD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 183,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_PIAD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspacepBastionIAD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 184,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_PIAD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspacepBastionIAD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 185,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_PORD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspacepBastionORD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 186,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_PORD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspacepBastionORD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 187,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_PORD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspacepBastionORD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 188,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_PORD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspacepBastionORD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 189,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_PHKG')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspacepBastionHKG')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 190,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_PHKG')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspacepBastionHKG')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 191,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_PHKG')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspacepBastionHKG')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 192,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_PHKG')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspacepBastionHKG')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 193,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_PLON')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspacepBastionLON')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 194,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_PLON')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspacepBastionLON')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 195,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_PLON')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspacepBastionLON')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 196,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_PLON')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspacepBastionLON')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 197,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_PLON5')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspacepBastionLON5')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 198,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_PLON5')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspacepBastionLON5')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 199,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_PLON5')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspacepBastionLON5')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 200,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_PLON5')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspacepBastionLON5')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 201,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_RDP_PSYD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows RDP",
        "protocol": "*",
        "sourcePortRange": "*",
        "destinationPortRange": "3389",
        "sourceAddressPrefix": "[variables('rackspacepBastionSYD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 202,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_SSH_PSYD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows SSH",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "22",
        "sourceAddressPrefix": "[variables('rackspacepBastionSYD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 203,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_HTTPS_PSYD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows HTTPS",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "443",
        "sourceAddressPrefix": "[variables('rackspacepBastionSYD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 204,
        "direction": "Inbound"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/networkSecurityGroups/securityRules",
      "name": "[concat(parameters('Name'),'/Allow_RAX_WinRM_PSYD')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "description": "Allows WinRM",
        "protocol": "Tcp",
        "sourcePortRange": "*",
        "destinationPortRange": "5986",
        "sourceAddressPrefix": "[variables('rackspacepBastionSYD')]",
        "destinationAddressPrefix": "[parameters('DestinationPrefix')]",
        "access": "Allow",
        "priority": 205,
        "direction": "Inbound"
      }
    }
  ],
  "outputs": {
  }
}
